# jei_bot

./: .editorconfig  .env  .env.dev  .env.prod  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_lzx.yml
data/ban_advertisement/: emoji.csv  key.txt
scripts/: build.sh
src/plugins/ban_advertisement/: __init__.py  ban_advertisement.py  config.py  module.py
